# motionprint

./: .gitignore  README.md  pyproject.toml
infra/: .dockerignore  Dockerfile
infra/terraform/environments/production/: aws.tf  backend.tf  dns.tf  gcp.tf  main.tf  outputs.tf  variables.tf
infra/terraform/modules/aws-region/: alb.tf  autoscaling.tf  ecr.tf  ecs.tf  logging.tf  main.tf  outputs.tf  variables.tf
infra/terraform/modules/gcp-region/: lb.tf  main.tf  outputs.tf  variables.tf
service/: Cargo.toml
service/src/: animation.rs  api.rs  cache.rs  encoder.rs  geometry.rs  lib.rs  main.rs  math_util.rs  palette.rs  params.rs  rasterizer.rs  scene.rs  shading.rs
src/motionprint/: __init__.py  __main__.py  cli.py  encoder.py  geometry.py  hash_mapping.py  palette.py  qr.py  renderer.py  scene.py  sha256_state.py  shaders.py
tests/: test_cli.py  test_geometry.py  test_hash_mapping.py  test_palette.py  test_qr.py  test_sha256_state.py
