[package]
name = "motionprint-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
glam = "0.30"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tempfile = "3"
sha2 = "0.10"
